<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.Actividades.SolicitudNueva">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="36dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/nuevas_input_monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/monto" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/nuevas_input_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/edad"
                android:maxLength="2"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/selecciona_tu_plazo"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/nuevas_rbtn_nueve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9 meses"/>
                <RadioButton
                    android:id="@+id/nuevas_rbtn_seis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6 meses"/>
                <RadioButton
                    android:id="@+id/nuevas_rbtn_tres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3 meses"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="Interes:"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="22sp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/nuevas_txt_interes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="$0.00"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="20sp"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/nuevas_cbx_Tarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/nuevas_txt_Tarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/TarjetaCredito"
                android:textColor="@color/colorTextSecundary"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Signup Button -->
        <Button
            android:id="@+id/nuevas_btn_solicitar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/solicitar_credito"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>